# llodapp

./: .gitignore  Caddyfile  HAS-MIGRATION.md  README.md  SCALING.md  docker-compose.yml  hash.txt
accessories/: claw.stl
python-proto/: Dockerfile  api.py  check_watertight.py  detect_features.py  export_cad.py  features_frame.py  features_loader.py  inspect_stls.py  main.py  mcp_server.py  merge_accessories.py  prototype_v1.py  prototype_v10_slide_aligned.py  prototype_v11_mabr.py  prototype_v2_planes.py  prototype_v3_snap.py  prototype_v4_voxel.py  prototype_v5_taubin.py  prototype_v6_shrinkwrap.py  prototype_v7_combined.py  prototype_v8_sweep.py  prototype_v9_aligned.py  pyproject.toml  split_plug.py  update_retention.py  update_scene_overlay.py
python-proto/configs/: sig_p320-04-19-2026-holster-config.json  sig_p320-04-20-2026-1738-holster-config.json  sig_p320-04-20-2026-1809-holster-config.json  sig_p320-04-21-2026-0046-holster-config.json  sig_p320-04-22-2026-0000-holster-config.json  sig_p320-MOS-migration.json
python-proto/jobs/03612be246e5/: tg.json
python-proto/jobs/063bb955bf82/: features.json  tg.json
python-proto/jobs/0f1cb7347f9f/: features_state.json
python-proto/jobs/155a8bbf499c/: tg.json
python-proto/jobs/173a04f4cda2/: features.json  tg.json
python-proto/jobs/1785f7a1dc68/: features.json  tg.json
python-proto/jobs/1b70e13b9f76/: features_state.json
python-proto/jobs/1d272e978a15/: features_state.json  tg.json
python-proto/jobs/1ff103296aba/: features_state.json  tg.json
python-proto/jobs/28290ef71c9a/: features_state.json
(+163 files in other folders)
