[project]
name = "python-proto"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "mapbox-earcut>=2.0.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "open3d>=0.19.0",
    "python-multipart>=0.0.9",
    "rich>=15.0.0",
    "rtree>=1.4.1",
    "scikit-image>=0.26.0",
    "shapely>=2.1.2",
    "trimesh>=4.11.5",
    "uvicorn>=0.32.0",
]
